zephyr: fix nav-link padding on collapsed navbars, fixes #1204

--- a/docs/5/zephyr/_bootswatch.scss
+++ b/docs/5/zephyr/_bootswatch.scss
@@ -55,6 +55,10 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700
   }
 }
 
+.navbar-nav {
+  --bs-nav-link-padding-x: .5rem;
+}
+
 // Buttons
 
 .btn-secondary,
